--- a/en/page2en.html
+++ b/en/page2en.html
@@ -39,10 +39,11 @@
         <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
         <h1>Dobby is Free</h1>
       </div>
-        <section>
-            <h1>Harry Potter: The Magical Saga That Enchanted the World</h1>
-            <p>Dive into the enchanting world of Harry Potter, where magic and adventure converge. Discover how this legendary saga has captivated millions of hearts around the globe, bringing a sense of wonder and escapism with every page turned.</p>
-            <div>
+    </section>
+        <section class="article">
+            <h1>The Magical Saga That Enchanted the World</h1>
+            <p class="chapeau">Dive into the enchanting world of Harry Potter, where magic and adventure converge. Discover how this legendary saga has captivated millions of hearts around the globe, bringing a sense of wonder and escapism with every page turned.</p>
+            <div class="part1">
                 <img src="/public/img/HarryP1 banner.webp" alt="Affiche">
                 <h2>The Call of Magic</h2>
                 <p>
@@ -50,21 +51,21 @@
                     "Magic is everywhere if you know where to look." - Albus Dumbledore
                 </p>
             </div>
-            <div>
+            <div class="part2">
                 <img src="/public/img/dumbuldore.webp" alt="dumbuldore">
                 <h2>Discover the World of Hogwarts</h2>
                 <p>At the heart of this saga is Hogwarts, the school of witchcraft and wizardry that becomes a true home for Harry, Ron, Hermione, and all fans. The thrilling adventures within its walls have inspired generations of readers and viewers.</p>
             </div>
-            <div>
+            <div class="part3">
                 <h2>The Struggle Against the Forces of Evil</h2>
                 <p>But Harry Potter is not just a story of friendship and magic. It's also an epic of courage, determination, and resistance against the forces of evil. The iconic character of Voldemort represents the ultimate threat, and Harry embodies hope and the power of love.</p>
             </div>
-            <div>
+            <div class="part4">
                 <h2>Beyond the Books and Films</h2>
                 <img src="/public/img/illucerf.webp" alt="illustration">
                 <p>The magic of Harry Potter goes far beyond the books and films. Theme parks, video games, merchandise, and a vibrant fan community are all evidence of its impact. Fans from around the world come together to celebrate this saga that continues to amaze, inspire, and unite.</p>
             </div>
-            <div>
+            <div class="part5">
                 <h2>Join Us in this Magical Adventure</h2>
                 <p>Harry Potter is much more than a series of books and films. It's a magical journey that has touched our hearts and souls. On this website, we explore the Harry Potter universe from every angle, with in-depth analysis, anecdotes, news, and a space for fans. Join us in this magical adventure where magic is real, friendship is precious, and the adventure has no end.</p>
             </div>
@@ -83,7 +84,7 @@
             </section>
             <section class="autre_article">
                 <h1>Others Articles</h1>
-            <div>
+            <div class="aa1">
                 <h2>Harry Potter and the Philosopher's Stone: The Magical Beginning of an Epic Saga</h2>
                 <img src="/public/img/HarryP1.webp" alt="Lien article 1">
                 <p>
@@ -92,7 +93,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa2">
                 <h2>Harry Potter and the Deathly Hallows: The Epic Conclusion of a Magical Saga</h2>
                 <img src="/public/img/Harry_gare.webp" alt="Lien article 3">
                 <p>
@@ -101,7 +102,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa3">
                 <h2>Hedwig's Theme: The Enchanted Melody of the Harry Potter Saga</h2>
                 <img src="/public/img/Hedwige.webp" alt="Lien article 4">
                 <p>
@@ -110,7 +111,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa4">
                 <h2>The Wizards Behind the Screen</h2>
                 <img src="/public/img/Chaise.webp" alt="Lien article 5">
                 <p>
