--- a/en/page3en.html
+++ b/en/page3en.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/style3.css" />
+    <link rel="stylesheet" href="/src/css/style3en.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <title>article 2</title>
@@ -39,36 +39,37 @@
             <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
             <h1>Dobby is Free</h1>
           </div>
-        <section>
+        </section>
+        <section class="article">
             <h1>Harry Potter and the Sorcerer's Stone: The Magical Beginning of an Epic Saga</h1>
-            <p>Dive into the mystery and magic: The epic first step of Harry Potter at the School of Sorcery.</p>
-            <div>
+            <p class="chapeau">Dive into the mystery and magic: The epic first step of Harry Potter at the School of Sorcery.</p>
+            <div class="part1">
                 <img src="/public/img/Banner.webp" alt="Affiche">
                 <p>
                     The world of literature was enchanted by the arrival of the young wizard who would forever change our perception of magic. 'Harry Potter and the Sorcerer's Stone' is the first chapter of Harry Potter's incredible journey, written by the talented J.K. Rowling. In this article, we delve into the book that started it all, the story that captivated millions of readers around the world.
                 </p>
             </div>
-            <div>
+            <div class="part2">
                 <h2>The Beginning of a Magical Adventure</h2>
                 <p>
                     The book opens with a mysterious introduction that introduces us to the Dursley family and a strange piece of news that shakes the world. We quickly discover that the Dursleys are anything but ordinary and that magic is about to make a thunderous entrance into their lives.
                 </p>
                     <img src="/public/img/dorslay.webp" alt="dorslay">
             </div>
-            <div>
+            <div class="part3">
                 <h2>The Letter That Changes Everything</h2>
                 <p>
                     Harry Potter, the young orphan, soon receives an astonishing letter, inviting him to join Hogwarts, the school of witchcraft and wizardry. This simple piece of parchment triggers a series of extraordinary events, and Harry embarks on an adventure beyond his imagination.
                 </p>
             </div>
-            <div>
+            <div class="part4">
                 <h2>Hogwarts School</h2>
                 <img src="/public/img/poudlard.webp" alt="poudlard">
                 <p>
                     At Hogwarts, Harry discovers a hidden world filled with magical creatures, magic, and mystery. He befriends Ron and Hermione, and together, they uncover the wonders and dangers of the school.
                 </p>
             </div>
-            <div>
+            <div class="part5">
                 <h1>The Hunt for the Evil Sorcerer</h1>
                 <p>
                     The book gradually reveals the existence of Lord Voldemort, the malevolent sorcerer responsible for the death of Harry's parents.
@@ -76,12 +77,12 @@
                 </p>
                 <img src="/public/img/vold more.webp" alt="Voldemort">
             </div>
-            <div>
+            <div class="part6">
                 <h1>A Classic of Fantasy Literature</h1>
                 <p>
                     Harry Potter and the Sorcerer's Stone' is much more than just a children's book. It's a work that spans generations, reminding everyone of the importance of friendship, courage, and perseverance. J.K. Rowling's magic has given birth to an epic saga that continues to captivate readers from around the world.
                 </p>
-                <p>
+                <p class="p2">
                     Whether you're a long-time fan or discovering Harry Potter for the first time, this book is the starting point of an incredible adventure that will take you to a world where magic is real, friends are precious, and love triumphs over evil.
                 </p>
                 <img src="/public/img/illulivre.webp" alt="illulivre">
@@ -101,16 +102,16 @@
         </section>
             <section class="autre_article">
                 <h1>Others Articles</h1>
-            <div>
+            <div class="aa1">
                 <h2>Harry Potter: The Magical Saga That Enchanted the World.</h2>
-                <img src="/public/img/HarryP1 banner.webp.webp" alt="Lien article 1">
+                <img src="/public/img/HarryP1 banner.webp" alt="Lien article 1">
                 <p>
                     Immersive exploration of the captivating world of Harry Potter. Since its first publication in 1997, this saga [...]
                 </p>
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa2">
                 <h2>Harry Potter and the Deathly Hallows: The Epic Conclusion of a Magical Saga</h2>
                 <img src="/public/img/Harry_gare.webp" alt="Lien article 3">
                 <p>
@@ -119,7 +120,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa3">
                 <h2>Hedwig's Theme: The Enchanted Melody of the Harry Potter Saga</h2>
                 <img src="/public/img/Hedwige.webp" alt="Lien article 4">
                 <p>
@@ -128,7 +129,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa4">
                 <h2>The Wizards Behind the Screen</h2>
                 <img src="/public/img/Chaise.webp" alt="Lien article 5">
                 <p>
