--- a/en/page4en.html
+++ b/en/page4en.html
@@ -39,34 +39,35 @@
             <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
             <h1>Dobby is Free</h1>
           </div>
-        <section>
+        </section>
+        <section class="article">
             <h1>Harry Potter and the Deathly Hallows: The Epic Conclusion of a Magical Saga</h1>
-            <p>Dive into the final battle, discover the secrets of the Deathly Hallows, and relive an epic conclusion to a legendary saga.</p>
-            <div>
+            <p class="chapeau">Dive into the final battle, discover the secrets of the Deathly Hallows, and relive an epic conclusion to a legendary saga.</p>
+            <div class="part1">
                 <img src="/public/img/afficherelique.webp" alt="Affiche">
                 <p>
                     The anticipation was unbearable, but in 2010, the moment finally arrived. Fans from around the world gathered to experience the first part of "Harry Potter and the Deathly Hallows." The last chapter of J.K. Rowling's epic saga was about to come to life on the big screen. In this article, we delve into the ultimate adventure of Harry, Ron, and Hermione.
                 </p>
             </div>
-            <div>
+            <div class="part2">
                 <h2>A Saga Reaching Its Pinnacle</h2>
                 <p>
                     Since the very first book, readers and moviegoers worldwide have followed the adventures of Harry Potter, a young wizard who discovered he was destined for an extraordinary fate. "Harry Potter and the Deathly Hallows" is the climax of this story, the crescendo that would answer all lingering questions.</p>
             </div>
-            <div>
+            <div class="part3">
                 <h2>The Final Battle</h2>
                 <img src="/public/img/combat.webp" alt="combat">
                 <p>
                     The first part of the film takes us into a dark and dangerous world. Voldemort is now at the peak of his power, and the shadow of war looms over Hogwarts. Harry, Ron, and Hermione are determined to find and destroy the Horcruxes, magical objects containing a part of Voldemort's soul, to defeat him once and for all.
                 </p>
             </div>
-            <div>
+            <div class="part4">
                 <h2>The Deathly Hallows</h2>
                 <p>
                     The film also explores the history of the three Deathly Hallows: the Elder Wand, the Resurrection Stone, and the Invisibility Cloak. These mythical objects play a crucial role in Harry's quest to defeat Voldemort, and they are at the heart of the plot.
                 </p>
             </div>
-            <div>
+            <div class="part5">
                 <h2>Courage and Determination</h2>
                 <img src="/public/img/amis.webp" alt="amis">
                 <p>
@@ -74,7 +75,7 @@
                     and their unbreakable bond is at the heart of the story.
                 </p>
             </div>
-            <div>
+            <div class="part6">
                 <h2>The Moving Conclusion</h2>
                 <p>
                     The first part of "Harry Potter and the Deathly Hallows" is an emotional cinematic experience, highlighting moments of fear, hope, sadness, and triumph.
@@ -82,18 +83,18 @@
                 </p>
                 <img src="/public/img/dobby.webp" alt="dobby">
             </div>
-            <div>
+            <div class="part7">
                 <h2>The Epic Conclusion</h2>
                 <p>
                     The second part of the film, released in 2011, brought an epic conclusion to the saga. The final battle at Hogwarts, the revelations about the characters, and Voldemort's fate were all elements that marked the end of this extraordinary adventure.
                 </p>
             </div>
-            <div>
+            <div class="part8">
                 <h2>An Unforgettable Saga</h2>
                 <p>
                     The Harry Potter series, from the Hogwarts School of Witchcraft and Wizardry to the magical world of the Deathly Hallows, will forever be etched in our memories. It has captivated generations of readers and viewers, transporting us to a world where magic is real, friendship is precious, and courage triumphs over evil.
                 </p>
-                <p>
+                <p class="p2">
                     Relive this epic conclusion of the Harry Potter saga and revisit the unforgettable moments that made this series a legend. Magic continues to live on, and the adventure knows no end.
                 </p>
                 <img src="/public/img/acteur.webp" alt="acteur">
@@ -114,16 +115,16 @@
             </section>
             <section class="autre_article">
                 <h1>Others Articles</h1>
-            <div>
+            <div class="aa1">
                 <h2>Harry Potter: The Magical Saga That Enchanted the World.</h2>
-                <img src="/public/img/HarryP1 banner.webp.webp" alt="Lien article 1">
+                <img src="/public/img/HarryP1 banner.webp" alt="Lien article 1">
                 <p>
                     Immersive exploration of the captivating world of Harry Potter. Since its first publication in 1997, this saga [...]
                 </p>
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa2">
                 <h2>Harry Potter and the Philosopher's Stone: The Magical Beginning of an Epic Saga</h2>
                 <img src="/public/img/HarryP1.webp" alt="Lien article 1">
                 <p>
@@ -132,7 +133,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa3">
                 <h2>Hedwig's Theme: The Enchanted Melody of the Harry Potter Saga</h2>
                 <img src="/public/img/Hedwige.webp" alt="Lien article 4">
                 <p>
@@ -141,7 +142,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa4">
                 <h2>The Wizards Behind the Screen</h2>
                 <img src="/public/img/Chaise.webp" alt="Lien article 5">
                 <p>
