--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/apropos.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 3</title>
+    <title>A Propos</title>
   </head>
 <body>
   <header>
@@ -39,6 +39,8 @@
         <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
         <h1>Dobby est libre</h1>
       </div>
+    </section>
+    <section class="article">
         <div>
         <h2>A Propos</h2>
         <p>
@@ -63,6 +65,7 @@
             partager vos théories, découvrir de nouveaux détails et échanger des souvenirs inoubliables.
         </p>
         </div>
+    </section>
       </main>
       <footer>
         <a href="page1.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
