petite modif et boutton

--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -72,8 +72,7 @@
                 <h2>Rejoignez-nous dans cette Aventure Magique</h2>
                 <p>Harry Potter est bien plus qu'une série de livres et de films. C'est un voyage magique qui a touché nos cœurs et nos âmes. Sur ce site, nous explorons l'univers de Harry Potter sous toutes ses facettes, avec des analyses approfondies, des anecdotes, des actualités, et un espace pour les fans. Rejoignez-nous dans cette aventure magique où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin.</p>
             </div>
-            <a href=""><img src="/public/img/partager" alt="partager"></a>
-            <button>GLOSSAIRE</button>
+            <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
@@ -81,8 +80,8 @@
                 <h2>Présentation du livre Harry Potter à l'École des Sorciers</h2>
                 <img src="/public/img/livre.webp" alt="livre">
                 <p>Harry Potter à l'École des Sorciers est le premier livre de la série Harry Potter, qui a captivé [...]</p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus2"><a href="articlesec_livre.html">VOIRE PLUS</a></button>
             </div>
             </section>
             <section class="autre_article">
@@ -93,8 +92,8 @@
                 <p>
                     Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus3"><a href="Page3.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa2">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
@@ -102,8 +101,8 @@
                 <p>
                     Plongez dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus4"><a href="Page4.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa3">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
@@ -111,8 +110,8 @@
                 <p>
                     Nous verrons la signification profonde de la mélodie emblématique composée [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus5"><a href="Page5.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa4">
                 <h2>les Mages Derrière l'Écran</h2>
@@ -120,8 +119,8 @@
                 <p>
                     Découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage6"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus6"><a href="Page6.html">VOIRE PLUS</a></button>
             </div>
         </section>
     </main>
