--- a/fr/Page4.html
+++ b/fr/Page4.html
@@ -109,8 +109,7 @@
                 </p>
                 <img src="/public/img/acteur.webp" alt="acteur">
             </div>
-            <a href=""><img src="/public/img/partager" alt="partager"></a>
-            <button>GLOSSAIRE</button>
+            <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
@@ -120,8 +119,8 @@
                 <p>Harry Potter et les Reliques de la Mort" est le point culminant de l'épopée.
                     Le film commence avec Harry, Ron et Hermione en fuite, traqués [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus2"><a href="articlesec_film">VOIRE PLUS</a></button>
             </div>
             </section>
             <section class="autre_article">
@@ -132,8 +131,8 @@
                 <p>
                     exploration immersive de l'univers captivant de Harry Potter. Depuis sa première publication en 1997, cette saga [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus3"><a href="Page2.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa2">
                 <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
@@ -141,8 +140,8 @@
                 <p>
                     Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus4"><a href="Page3.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa3">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
@@ -150,8 +149,8 @@
                 <p>
                     Nous verrons la signification profonde de la mélodie emblématique composée [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus5"><a href="Page5.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa4">
                 <h2>les Mages Derrière l'Écran</h2>
@@ -159,8 +158,8 @@
                 <p>
                     Découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage6"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus6"><a href="Page6.html">VOIRE PLUS</a></button>
             </div>
         </section>
     </main>
