--- a/fr/Page6.html
+++ b/fr/Page6.html
@@ -100,8 +100,7 @@
                 </p>
             </div>
             
-            <a href=""><img src="/public/img/partager" alt="partager"></a>
-            <button>GLOSSAIRE</button>
+            <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
@@ -111,8 +110,8 @@
                 <p>
                     Chris Columbus a débuté sa carrière à Hollywood en écrivant des scénarios pour des films tels que "Gremlins" et "Les Goonies" (1985).  Mais  [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus2"><a href="articlesec_rea.html">VOIRE PLUS</a></button>
             </div>
             </section>
             <section class="autre_article">
@@ -123,8 +122,8 @@
                 <p>
                     exploration immersive de l'univers captivant de Harry Potter. Depuis sa première publication en 1997, cette saga [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus3"><a href="Page2.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa2">
                 <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
@@ -132,8 +131,8 @@
                 <p>
                     Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus4"><a href="Page3.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa3">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
@@ -141,8 +140,8 @@
                 <p>
                     Plongez dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus5"><a href="Page4.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa4">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
@@ -150,8 +149,8 @@
                 <p>
                     Nous verrons la signification profonde de la mélodie emblématique composée [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage6"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus6"><a href="Page5.html">VOIRE PLUS</a></button>
             </div>
         </section>
     </main>
