--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -93,8 +93,7 @@
                 </p>
                 <img src="/public/img/illulivre.webp" alt="illulivre">
             </div>
-            <a href=""><img src="/public/img/partager" alt="partager"></a>
-            <button>GLOSSAIRE</button>
+            <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
@@ -102,8 +101,8 @@
                 <h2>Présentation du livre Harry Potter à l'École des Sorciers</h2>
                 <img src="/public/img/livre.webp" alt="livre">
                 <p>Harry Potter à l'École des Sorciers est le premier livre de la série Harry Potter, qui a captivé [...]</p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus2"><a href="articlesec_livre.html">VOIRE PLUS</a></button>
             </div>
             </section>
             <section class="autre_article">
@@ -114,8 +113,8 @@
                 <p>
                     exploration immersive de l'univers captivant de Harry Potter. Depuis sa première publication en 1997, cette saga [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus3"><a href="Page2.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa2">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
@@ -123,8 +122,8 @@
                 <p>
                     Plongez dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus4"><a href="Page4.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa3">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
@@ -132,8 +131,8 @@
                 <p>
                     Nous verrons la signification profonde de la mélodie emblématique composée [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus5"><a href="Page5.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa4">
                 <h2>les Mages Derrière l'Écran</h2>
@@ -141,8 +140,8 @@
                 <p>
                     Découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage6"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus6"><a href="Page6.html">VOIRE PLUS</a></button>
             </div>
         </section>
     </main>
