--- a/fr/Page5.html
+++ b/fr/Page5.html
@@ -93,8 +93,7 @@
                 </p>
             </div>
             
-            <a href=""><img src="/public/img/partager" alt="partager"></a>
-            <button>GLOSSAIRE</button>
+            <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
@@ -103,8 +102,8 @@
                 <img src="/public/img/concert.webp" alt="concert">
                 <p>La musique apparaît pour la première fois dans le film Harry Potter à l'école des sorciers  et elle est présente tout au long de la série. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage2"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus2"><a href="articlesec_musique">VOIRE PLUS</a></button>
             </div>
             </section>
             <section class="autre_article">
@@ -115,8 +114,8 @@
                 <p>
                     exploration immersive de l'univers captivant de Harry Potter. Depuis sa première publication en 1997, cette saga [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage3"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus3"><a href="Page2.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa2">
                 <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
@@ -124,8 +123,8 @@
                 <p>
                     Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier. vous serez transportez au commencement de l'aventure extraordinaire [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage4"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus4"><a href="Page3.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa3">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
@@ -133,8 +132,8 @@
                 <p>
                     Plongez dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage5"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus5"><a href="Page4.html">VOIRE PLUS</a></button>
             </div>
             <div class="aa4">
                 <h2>les Mages Derrière l'Écran</h2>
@@ -142,8 +141,8 @@
                 <p>
                     Découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie. [...]
                 </p>
-                <a href=""><img src="/public/img/partager" alt="partager"></a>
-                <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
+                <button class="partage6"><img src="/public/img/partager.png" alt="partager"></button>
+                <button class="vplus6"><a href="Page6.html">VOIRE PLUS</a></button>
             </div>
         </section>
     </main>
