--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -73,6 +73,7 @@
                 <p>Harry Potter est bien plus qu'une série de livres et de films. C'est un voyage magique qui a touché nos cœurs et nos âmes. Sur ce site, nous explorons l'univers de Harry Potter sous toutes ses facettes, avec des analyses approfondies, des anecdotes, des actualités, et un espace pour les fans. Rejoignez-nous dans cette aventure magique où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin.</p>
             </div>
             <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
+            <button class="btnglo"><a href="Glossaire.html">GLOSSAIRE</a></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
