--- a/fr/Page4.html
+++ b/fr/Page4.html
@@ -110,6 +110,7 @@
                 <img src="/public/img/acteur.webp" alt="acteur">
             </div>
             <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
+            <button class="btnglo"><a href="Glossaire.html">GLOSSAIRE</a></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
