--- a/fr/Page5.html
+++ b/fr/Page5.html
@@ -94,6 +94,7 @@
             </div>
             
             <button class="partage1"><img src="/public/img/partager.png" alt="partager"></button>
+            <button class="btnglo"><a href="Glossaire.html">GLOSSAIRE</a></button>
         </section>
         <section class="article_associé">
                 <h1>Article associé</h1>
