--- a/en/Glossary.html
+++ b/en/Glossary.html
@@ -3,16 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/css/glossaire.css">
     <title>Glossary</title>
 </head>
 <body>
     <header>
-        <a href="page1en.html"><img src="/public/img/logo.webp"></a>
-        <p>ABOUT US</p><p>GLOSSARY</p>
-      </header>
-      <img src="/public/img/head2.webp" alt="head2">
+        <a href="page1en.html"><img src="/public/img/logo.webp.jpeg"></a>
+        <p class="apropos"><a href="aboutus.html">About us</a></p><p class="glossaire"><a href="Glossary.html">GLOSSARY</a></p>
+    
+        <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
+          <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
+          </a>
+          <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
+            <div class="close-icon" @click="menuIsOpen = false">
+              <img src="/public/img/menu-closed.webp" alt="Fermer le menu" /></div>
+              <ul>
+                <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
+                <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
+                <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
+                <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
+                <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+              </ul>
+          </nav>
+        </header>
       <main>
-        <div>
+        <section class="landing">
+          <img class="head" src="/public/img/Head.webp" alt="accueuil">
+          <div class="headtxt">
+            <p><a href="/fr/page1.html">FR</a> / <a href="/en/page1en.html">ENG</a></p>
+            <h1>Dobby is Free</h1>
+          </div>
+          <div class="glo">
         <h2>Glossary</h2>
         <p>
             Poudlard: The iconic wizarding school where Harry Potter and his friends study magic.
@@ -53,22 +74,22 @@
         </div>
       </main>
       <footer>
-        <a href="page1en.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
+        <a href="page1.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
         <p class="menu">MENU</p>
         <ul class="articleli">
-            <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
-            <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
-            <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
-            <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
-            <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+          <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+            <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+            <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+            <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+            <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
         <ul class="utils">
-          <li><a href="aboutus.html">About us</a></li>
-          <li><a href="Glossary.html">Glossary</a></li>
-          <li><a href="otherpro.html">Others Projects</a></li>
+          <li><a href="apropos.html">A Propos</a></li>
+          <li><a href="glossaire.html">Glossaire</a></li>
+          <li><a href="autreprojet.html">Autres projets</a></li>
         </ul>
   
-        <p class="suivre">FOLLOW US</p>
+        <p class="suivre">NOUS SUIVRE</p>
         <div class="social-icons">
           <img class="img1" src="/public/img/facebook.webp" />
           <img class="img2" src="/public/img/instagram.webp" />
