--- a/en/aboutus.html
+++ b/en/aboutus.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/stlyle2.css" />
+    <link rel="stylesheet" href="/src/css/apropos.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <title>article 1</title>
@@ -59,22 +59,22 @@
         </div>
       </main>
       <footer>
-        <a href="page1en.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
+        <a href="page1.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
         <p class="menu">MENU</p>
         <ul class="articleli">
-            <li><a href="page2en.html">The Magical Saga That Enchanted the World</a></li>
-            <li><a href="page3en.html">The Beginning of a Magical Adventure</a></li>
-            <li><a href="page4en.html">The Epic Conclusion of a Magical Saga</a></li>
-            <li><a href="page5en.html">The Enchanting Melody of the Harry Potter Saga</a></li>
-            <li><a href="page6en.html">The Wizards Behind the Screen</a></li>
+          <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+            <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+            <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+            <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+            <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
         <ul class="utils">
-          <li><a href="aboutus.html">About us</a></li>
-          <li><a href="Glossary.html">Glossary</a></li>
-          <li><a href="otherpro.html">Others Projects</a></li>
+          <li><a href="apropos.html">A Propos</a></li>
+          <li><a href="glossaire.html">Glossaire</a></li>
+          <li><a href="autreprojet.html">Autres projets</a></li>
         </ul>
   
-        <p class="suivre">FOLLOW US</p>
+        <p class="suivre">NOUS SUIVRE</p>
         <div class="social-icons">
           <img class="img1" src="/public/img/facebook.webp" />
           <img class="img2" src="/public/img/instagram.webp" />
